kubernetes/apps/networking/ingresses/ingressRoutes/lidarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name lidarr
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.${SECRET_DOMAIN}`)
      priority: 99
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: *name
          port: 80
          namespace: default
    - kind: Rule
      match: Host(`lidarr.${SECRET_DOMAIN}`) && (Headers(`X-Api-Key`, `${LIDARR_API_KEY}`) || Query(`apikey`, `${LIDARR_API_KEY}`))
      priority: 100
      middlewares:
        - name: headers
          namespace: networking
      services:
        - name: *name
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
